@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2010, Claus Nielsen, cn@cn-consult.dk
+ * Copyright (C) 2010-2024, Claus Nielsen, clausn999@gmail.com
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -17,30 +17,27 @@
  */
 package dk.clanie.properties;
 
-import static dk.clanie.properties.TemporalExpiringProperty.*;
-import static dk.clanie.collections.CollectionFactory.newArrayList;
-import static dk.clanie.collections.Tuple.newTuple;
-import static org.hamcrest.Matchers.hasItems;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.nullValue;
-import static org.junit.Assert.assertThat;
+import static dk.clanie.properties.TemporalExpiringProperty.EXPIRES_NEVER;
+import static org.assertj.core.api.Assertions.assertThat;
 
+import java.time.Instant;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 
-import org.joda.time.Instant;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
-import dk.clanie.collections.Tuple.Pair;
+import dk.clanie.core.collections.Tuple;
+import dk.clanie.core.collections.Tuple.Pair;
 
 
 public class TemporalExpiringPropertyTest {
 
 
-	@BeforeClass
+	@BeforeAll
 	public static void init() {
-		Locale.setDefault(new Locale("da"));
+		Locale.setDefault(Locale.of("da"));
 	}
 
 
@@ -52,37 +49,41 @@ public class TemporalExpiringPropertyTest {
 
 
 	private void setThreeValues(TemporalExpiringProperty<String> prop) {
-		prop.set(new Instant("2010-01-05"), new Instant("2010-01-08"), "one");
-		prop.set(new Instant("2010-01-10"), EXPIRES_NEVER, "two");
-		prop.set(new Instant("2010-01-15"), new Instant("2010-01-20"), "three");
+		prop.set(Instant.parse("2010-01-05T00:00:00z"), Instant.parse("2010-01-08T00:00:00z"), "one");
+		prop.set(Instant.parse("2010-01-10T00:00:00z"), EXPIRES_NEVER, "two");
+		prop.set(Instant.parse("2010-01-15T00:00:00z"), Instant.parse("2010-01-20T00:00:00z"), "three");
 	}
 
 
 	@Test
 	public void testValuesVaryingOverTime() {
 		TemporalExpiringProperty<String> prop = temporalPropertyWithThreeValues();
-		assertThat(prop.get(new Instant("2010-01-04")), is(nullValue()));
-		assertThat(prop.get(new Instant("2010-01-07")), is("one"));
-		assertThat(prop.get(new Instant("2010-01-08")), is(nullValue()));
-		assertThat(prop.get(new Instant("2010-01-12")), is("two"));
-		assertThat(prop.get(new Instant("2010-01-18")), is("three"));
-		assertThat(prop.get(new Instant("2010-01-20")), is(nullValue()));
-		assertThat(prop.get(), is(nullValue()));
+		assertThat(prop.get(Instant.parse("2010-01-04T00:00:00z"))).isNull();
+		assertThat(prop.get(Instant.parse("2010-01-07T00:00:00z"))).isEqualTo("one");
+		assertThat(prop.get(Instant.parse("2010-01-08T00:00:00z"))).isNull();;
+		assertThat(prop.get(Instant.parse("2010-01-12T00:00:00z"))).isEqualTo("two");
+		assertThat(prop.get(Instant.parse("2010-01-18T00:00:00z"))).isEqualTo("three");
+		assertThat(prop.get(Instant.parse("2010-01-20T00:00:00z"))).isNull();
+		assertThat(prop.get()).isNull();
 	}
 
+
 	@Test
-	@SuppressWarnings("unchecked")
 	public void testNotification() {
-		final List<Pair<String, String>> changes = newArrayList();
+		final List<Pair<String, String>> changes = new ArrayList<>();
 		TemporalExpiringProperty<String> prop = new TemporalExpiringProperty<String>();
 		prop.addChangeListener(new PropertyChangeListener<String>() {
 			@Override
 			public void propertyChanged(String oldValue, String newValue) {
-				changes.add(newTuple(oldValue, newValue));
+				changes.add(Tuple.of(oldValue, newValue));
 			}
 		});
 		setThreeValues(prop);
-		assertThat(changes, hasItems(newTuple((String)null, "one"), newTuple((String) null, "two"), newTuple("two", "three")));
+		assertThat(changes).containsExactly(
+				Tuple.of((String)null, "one"),
+				Tuple.of((String) null, "two"),
+				Tuple.of("two", "three"));
 	}
+
 
 }
