@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2010, Claus Nielsen, cn@cn-consult.dk
+ * Copyright (C) 2010, Claus Nielsen, clausn999@gmail.com
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -17,29 +17,26 @@
  */
 package dk.clanie.properties;
 
-import static dk.clanie.collections.CollectionFactory.newArrayList;
-import static dk.clanie.collections.Tuple.newTuple;
-import static org.hamcrest.Matchers.hasItems;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.nullValue;
-import static org.junit.Assert.assertThat;
+import static org.assertj.core.api.Assertions.assertThat;
 
+import java.time.Instant;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 
-import org.joda.time.Instant;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
-import dk.clanie.collections.Tuple.Pair;
+import dk.clanie.core.collections.Tuple;
+import dk.clanie.core.collections.Tuple.Pair;
 
 
 public class TemporalPropertyTest {
 
 
-	@BeforeClass
+	@BeforeAll
 	public static void init() {
-		Locale.setDefault(new Locale("da"));
+		Locale.setDefault(Locale.of("da"));
 	}
 
 
@@ -51,35 +48,39 @@ public class TemporalPropertyTest {
 
 
 	private void setThreeValues(TemporalProperty<String> prop) {
-		prop.set(new Instant("2010-01-05"), "one");
-		prop.set(new Instant("2010-01-10"), "two");
-		prop.set(new Instant("2010-01-15"), "three");
+		prop.set(Instant.parse("2010-01-05T00:00:00Z"), "one");
+		prop.set(Instant.parse("2010-01-10T00:00:00Z"), "two");
+		prop.set(Instant.parse("2010-01-15T00:00:00Z"), "three");
 	}
 
 
 	@Test
 	public void testValuesVaryingOverTime() {
 		TemporalProperty<String> prop = temporalPropertyWithThreeValues();
-		assertThat(prop.get(new Instant("2010-01-04")), is(nullValue()));
-		assertThat(prop.get(new Instant("2010-01-08")), is("one"));
-		assertThat(prop.get(new Instant("2010-01-12")), is("two"));
-		assertThat(prop.get(new Instant("2010-01-28")), is("three"));
-		assertThat(prop.get(), is("three"));
+		assertThat(prop.get(Instant.parse("2010-01-04T00:00:00Z"))).isNull();;
+		assertThat(prop.get(Instant.parse("2010-01-08T00:00:00Z"))).isEqualTo("one");
+		assertThat(prop.get(Instant.parse("2010-01-12T00:00:00Z"))).isEqualTo("two");
+		assertThat(prop.get(Instant.parse("2010-01-28T00:00:00Z"))).isEqualTo("three");
+		assertThat(prop.get()).isEqualTo("three");
 	}
 
+
 	@Test
-	@SuppressWarnings("unchecked")
 	public void testNotification() {
-		final List<Pair<String, String>> changes = newArrayList();
+		final List<Pair<String, String>> changes = new ArrayList<>();
 		TemporalProperty<String> prop = new TemporalProperty<String>();
 		prop.addChangeListener(new PropertyChangeListener<String>() {
 			@Override
 			public void propertyChanged(String oldValue, String newValue) {
-				changes.add(newTuple(oldValue, newValue));
+				changes.add(Tuple.of(oldValue, newValue));
 			}
 		});
 		setThreeValues(prop);
-		assertThat(changes, hasItems(newTuple((String)null, "one"), newTuple("one", "two"), newTuple("two", "three")));
+		assertThat(changes).containsExactly(
+				Tuple.of((String)null, "one"),
+				Tuple.of("one", "two"),
+				Tuple.of("two", "three"));
 	}
+
 
 }
